--- a/public/global.css
+++ b/public/global.css
@@ -1,63 +1,149 @@
 html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
+position: relative;
+width: 100%;
+height: 100%;
 }
 
 body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+font-family: sans-serif;
+text-align: center;
+background: #f2f2f2;
+padding: 20px;
 }
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
-label {
-	display: block;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
+canvas {
+margin-top: 10px;
+border: 1px solid #ccc;
+max-width: 100%;
 }
 
 button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
+margin-top: 10px;
+display: inline-block;
+padding: 6px 12px;
+font-size: 14px;
+font-weight: 400;
+line-height: 1.42857143;
+text-align: center;
+white-space: nowrap;
+vertical-align: middle;
+cursor: pointer;
+border: 1px solid #adadad;
+background: #fff;
+border-radius: 4px;
 }
 
-button:disabled {
-	color: #999;
+button:hover {
+color: #333;
+background-color: #e6e6e6;
 }
 
-button:not(:disabled):active {
-	background-color: #ddd;
+label {
+display: inline-block;
+padding: 6px 12px;
+font-size: 14px;
+font-weight: 400;
+line-height: 1.42857143;
+text-align: center;
+white-space: nowrap;
+vertical-align: middle;
+cursor: pointer;
+border: 1px solid #adadad;
+background: #fff;
+border-radius: 4px;
 }
 
-button:focus {
-	border-color: #666;
+label:hover {
+color: #333;
+background-color: #e6e6e6;
 }
+
+input[type="file"] {
+display: none;
+}
+
+.bg {
+animation: bg_animate 10s ease-in-out alternate infinite;
+-webkit-animation: bg_animate 10s ease-in-out alternate infinite;
+-moz-animation: bg_animate 10s ease-in-out alternate infinite;
+-o-animation: bg_animate 10s ease-in-out alternate infinite;
+}
+
+@keyframes bg_animate {
+0% {
+background: #fff;
+}
+20% {
+background: #b0ffc3;
+} 40% {
+background: #fffcb0;
+}
+60% {
+background: #ffa3a3;
+}
+80% {
+background: #a3ddff;
+}
+100% {
+background: #4b4b4b;
+}
+}
+@-webkit-keyframes bg_animate {
+0% {
+background: #fff;
+} 20% {
+background: #b0ffc3;
+} 40% {
+background: #fffcb0;
+}
+60% { 
+background: #ffa3a3;
+}
+80% {
+background: #a3ddff;
+}
+100% {
+background: #4b4b4b;
+}
+}
+@-moz-keyframes bg_animate{
+0% {
+background: #fff;
+}
+20% {
+background: #b0ffc3;
+}
+40% {
+background: #fffcb0;
+}
+60% {
+background: #ffa3a3;
+}
+80% {
+background: #a3ddff;
+}
+100% {
+background: #4b4b4b;
+}
+}
+@-o-keyframes bg_animate{
+0% {
+background: #fff;
+}
+20% {
+background: #b0ffc3;
+}
+40% {
+background: #fffcb0;
+}
+60% {
+background: #ffa3a3;
+}
+80% {
+background: #a3ddff;
+}
+100% {
+background: #4b4b4b;
+}
+}
+
